<resources>
    <string name="app_name">Ikue</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="results_view_toolbar_title">Results</string>

    <string name="detail_view_meanings_header">Meanings</string>
    <string name="detail_view_other_forms_header">Other forms</string>
    <string name="detail_view_priorities_header">Frequency information</string>
    <string name="detail_view_meaning_number">%1$d.</string>
    <string name="search_hint">English, Japanese or Romaji</string>
    <string name="search_view_snackbar_english">Searching in English</string>
    <string name="search_view_snackbar_english_action">Show Romaji</string>
    <string name="search_view_snackbar_romaji">Searching in Romaji</string>
    <string name="search_view_snackbar_romaji_action">Show English</string>
    <string name="add_favourite">Add to Favourites</string>
    <string name="error_add_favourite">Error adding entry to Favourites</string>
    <string name="success_add_favourite">Added entry to Favourites</string>
    <string name="error_remove_favourite">Error removing entry from Favourites</string>
    <string name="success_remove_favourite">Removed entry from Favourites</string>
    <string name="error_add_to_history">Error adding entry to History</string>
    <string name="history_fragment_title">History</string>
    <string name="home_fragment_title">Home</string>
    <string name="favourites_fragment_title">Favourites</string>
    <string name="settings_activity_title">Settings</string>
    <string name="about_activity_title">About</string>
    <string name="about_activity_description">Ikue is an open source Japanese dictionary application.</string>
    <string name="about_activity_connect">Connect with us</string>
    <string name="about_activity_licenses">Open source licenses</string>
    <string name="about_activity_terms_of_use">Terms of use</string>
    <string name="about_activity_thanks">Special thanks</string>
    <string name="about_activity_erdrg_thanks">A huge thank you to the EDRDG group, and especially Jim Breen. Without the data provided by them this application would not be possible.</string>
    <string name="about_activity_close">Close</string>


    <string name="pref_startupPage">Startup page</string>
    <string name="pref_startupPage_default">1</string>
    <string name="pref_caseSensitiveRomajiSearch">Case sensitive Romaji search</string>
    <string name="pref_caseSensitiveRomajiSearch_summ">Convert upper-case characters to Katakana</string>
    <string name="pref_search_settings_title">Search</string>
    <string name="pref_limitSearchResults">Limit number of results</string>
    <string name="pref_limitResults_default">0</string>
    <string name="pref_general_settings_title">General</string>
    <string name="pref_history_settings_title">History</string>
    <string name="pref_favourites_settings_title">Favourites</string>
    <string name="pref_limitHistoryResults">Limit number of results</string>
    <string name="pref_limitFavouritesResults">Limit number of results</string>
    <string name="pref_defaultSearchType">Default search type</string>
    <string name="pref_defaultSearchType_default">0</string>

    <string name="send_to">Share with:</string>
    <string name="word_of_the_day_header">Word of the Day</string>
    <string name="word_of_the_day_detail_button">Learn more</string>
    <string name="feedback_card_button">Contact us</string>
    <string name="feedback_card_content">Do you have a suggestion for a feature? Found a bug? Feel like something could be done better or improved? Let us know!</string>
    <string name="feedback_card_title">Send Feedback</string>
    <string name="tips_card_header">Tips</string>
    <string name="tips_card_button">See all</string>
    <string name="share_button_content_description">Share button</string>

    <string name="common_chip">common</string>
    <string name="feedback_button_intent_chooser">Send email</string>

    <string name="tips_activity_title">Tips</string>
</resources>
