<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_search_settings"
        android:title="@string/pref_search_settings_title">
        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_caseSensitiveRomajiSearch"
            android:summary="@string/pref_caseSensitiveRomajiSearch_summ"
            android:title="@string/pref_caseSensitiveRomajiSearch" />
        <ListPreference
            android:defaultValue="@string/pref_defaultSearchType_default"
            android:dialogTitle="@string/pref_defaultSearchType"
            android:entries="@array/pref_defaultSearchType_entries"
            android:entryValues="@array/pref_defaultSearchType_values"
            android:key="pref_defaultSearchType"
            android:summary="%s"
            android:title="@string/pref_defaultSearchType" />
        <ListPreference
            android:defaultValue="@string/pref_limitResults_default"
            android:dialogTitle="@string/pref_limitSearchResults"
            android:entries="@array/pref_limitResults_entries"
            android:entryValues="@array/pref_limitResults_values"
            android:key="pref_limitSearchResults"
            android:summary="%s"
            android:title="@string/pref_limitSearchResults" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_history_settings"
        android:title="@string/pref_history_settings_title">
        <ListPreference
            android:defaultValue="@string/pref_limitResults_default"
            android:dialogTitle="@string/pref_limitHistoryResults"
            android:entries="@array/pref_limitResults_entries"
            android:entryValues="@array/pref_limitResults_values"
            android:key="pref_limitHistoryResults"
            android:summary="%s"
            android:title="@string/pref_limitHistoryResults" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_favourites_settings"
        android:title="@string/pref_favourites_settings_title">
        <ListPreference
            android:defaultValue="@string/pref_limitResults_default"
            android:dialogTitle="@string/pref_limitFavouritesResults"
            android:entries="@array/pref_limitResults_entries"
            android:entryValues="@array/pref_limitResults_values"
            android:key="pref_limitFavouriteResults"
            android:summary="%s"
            android:title="@string/pref_limitFavouritesResults" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_general_settings"
        android:title="@string/pref_general_settings_title">
        <ListPreference
            android:defaultValue="@string/pref_startupPage_default"
            android:dialogTitle="@string/pref_startupPage"
            android:entries="@array/pref_startupPage_entries"
            android:entryValues="@array/pref_startupPage_values"
            android:key="pref_startupPage"
            android:summary="%s"
            android:title="@string/pref_startupPage" />
    </PreferenceCategory>
</PreferenceScreen>