<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_history_fragment"
            android:icon="@drawable/ic_history_white"
            android:tint="@color/button_grey"
            android:title="@string/history_fragment_title" />
        <item
            android:id="@+id/nav_home_fragment"
            android:icon="@drawable/ic_home_white"
            android:tint="@color/button_grey"
            android:title="@string/home_fragment_title" />
        <item
            android:id="@+id/nav_favourites_fragment"
            android:icon="@drawable/ic_star_white"
            android:tint="@color/button_grey"
            android:title="@string/favourites_fragment_title" />
    </group>
</menu>