<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 android:id="@+id/detail_content"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/md_keylines">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorSecondary"
                android:text="@string/detail_view_meanings_header"
                android:textSize="@dimen/article_titles"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="@dimen/md_keylines" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/meanings_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingTop="0dp"/>

            <View
                android:id="@+id/other_forms_divider"
                style="@style/Divider"/>

            <TextView
                android:id="@+id/other_forms_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorSecondary"
                android:text="@string/detail_view_other_forms_header"
                android:textSize="@dimen/article_titles"
                android:layout_marginBottom="@dimen/md_keylines"
                android:layout_marginTop="@dimen/md_keylines"/>

            <TextView
                android:id="@+id/other_forms_element"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="@dimen/article_subheading_dense"/>

            <View
                android:id="@+id/freq_info_divider"
                style="@style/Divider"/>

            <TextView
                android:id="@+id/freq_info_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorSecondary"
                android:text="@string/detail_view_priorities_header"
                android:textSize="@dimen/article_titles"
                android:layout_marginBottom="@dimen/md_keylines"
                android:layout_marginTop="@dimen/md_keylines"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:singleSelection="true"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:contentDescription="@string/add_favourite"
        android:focusable="true"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end"
        android:src="@drawable/ic_star_border_white"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>